# src/controllers/auth.controller.ts
@@ -25,7 +25,23 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().email().required(),
-    password: Yup.string().required(),
+    password: Yup.string().required().min(6, "Password must be at least 6 characters")
+    .test(
+        "at-least-one-uppercase-letter", 
+        "Contains at least one uppercase letter", 
+        (value) => {
+            if (!value) return false;
+            const regex = /^(?=.*[A-Z])/;
+            return regex.test(value);
+        })
+        .test(
+        "at-least-one-number", 
+        "Contains at least one uppercase letter", 
+        (value) => {
+            if (!value) return false;
+            const regex = /^(?=.*\d)/;
+            return regex.test(value);
+        }),
     confirmPassword: Yup.string().required().oneOf([Yup.ref("password"), ""], "password not match"),
 
 });
@@ -35,6 +51,15 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+     required: true,
+     schema: {$ref: "#/components/schemas/RegisterRequest"}
+     }
+     */
+
     const {fullName, username, email, password, confirmPassword} = 
     req.body as unknown as TRegister;
 
@@ -44,13 +69,13 @@ export default {
         username, 
         email, 
         password, 
-        confirmPassword
+        confirmPassword,
     });
 
     const result = await UserModel.create({
         fullName,
         email,
-         username,
+        username,
         password,
     });
 
@@ -64,17 +89,13 @@ export default {
             message: err.message,
             data: null,
         });
-    }
-
-
-
-
-   
+    }   
   },
 
   async login(req: Request, res: Response) {
 
     /**
+     #swagger.tags = ['Auth']
      #swagger.requestBody = {
      required: true,
      schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -100,6 +121,7 @@ export default {
                 username: identifier,
               },
             ],
+            isActive: true,
         });
 
         if (!userByIdentifier) {
@@ -144,6 +166,7 @@ export default {
   async me(req: IReqUser, res: Response) {
 
     /**
+     #swagger.tags = ['Auth']
      #swagger.security = [{
      "bearerAuth": []
      }]
@@ -168,4 +191,44 @@ export default {
     }
 
   },
+
+  async activation(req: Request, res: Response) {
+/**
+ #swagger.tags = ['Auth']
+ #swagger.requestBody = {
+    required: true,
+    schema: {$ref: '#/components/schemas/ActivationRequest'}
+ }
+ */
+    try {
+        const { code } = req.body as {code: string};
+
+        const user = await UserModel.findOneAndUpdate(
+            {
+                activationCode: code,
+            },
+            {
+                isActive: true,
+            },
+            {
+                new: true,
+            }
+        );
+
+        res.status(200).json({
+            message: "User successfully activated",
+            data: user,
+        });
+
+    } catch (error) {
+          const err = error as unknown as Error;
+        res.status(400).json({
+            message: err.message,
+            data: null,
+        });
+    }
+
+
+  }
+
 };
